--- a/offices.html
+++ b/offices.html
@@ -194,7 +194,7 @@
 	</thead>
 	<tbody>
 		<tr data-geometry="POINT (-135.055647 60.719378)" data-type="wkt">
-			<td>Whitehorse</td>
+			<td>Whitehorse<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Whitehorse <abbr title="Northern Service Centre">NSC</abbr></td>
 			<td>Elijah Smith Building<br>300 Main Street<br>Whitehorse, YT &nbsp;Y1A 2B5</td>
 		</tr>
@@ -229,7 +229,7 @@
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>
 		<tr data-geometry="POINT (-114.373037 62.453132)" data-type="wkt">
-			<td>Yellowknife</td>
+			<td>Yellowknife<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Yellowknife <abbr title="Northern Service Centre">NSC</abbr></td>
 			<td>Greenstone Building<br>5101 Franklin Ave<br>Yellowknife, NT &nbsp;X1A 3Z4</td>
 		</tr>
@@ -404,9 +404,9 @@
 			<td>Suite 101, 180 de la Cathédrale Avenue<br>Rimouski QC &nbsp;G5L 5H9</td>
 		</tr>
 		<tr data-geometry="POINT (-68.523060 63.749211)" data-type="wkt">
-			<td>Iqaluit</td>
+			<td>Iqaluit<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Iqaluit <abbr title="Northern Service Centre">NSC</abbr></td>
-			<td>Qilaut Building<br>933 Mivvik Stree<br>Iqaluit, NU &nbsp;X0A 0H0</td>
+			<td>Qilaut Building<br>933 Mivvik Street<br>Iqaluit, NU &nbsp;X0A 0H0</td>
 		</tr>
 		<tr data-geometry="POINT (-66.060854 45.270853)" data-type="wkt">
 			<td>Saint John</td>
@@ -452,15 +452,22 @@
 <dl>
 	<dt>Footnote 1</dt>
 	<dd id="fn1">
-		<p>The drop box at this location is available only during business hours (Monday to Friday, 8:30 am to 4:30 pm).</p>
-		<p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
+		<p>There is no drop box at this location. See <a href="https://www.canada.ca/en/revenue-agency/corporate/contact-information/northern.html">Northern Service Centres</a>.</p>
+		<p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>2<span class="wb-inv">referrer</span></a></p>
 	</dd>
 </dl>
 <dl>
 	<dt>Footnote 2</dt>
 	<dd id="fn2">
+		<p>The drop box at this location is available only during business hours (Monday to Friday, 8:30 am to 4:30 pm).</p>
+		<p class="fn-rtn"><a href="#fn2-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
+	</dd>
+</dl>
+<dl>
+	<dt>Footnote 3</dt>
+	<dd id="fn3">
 		<p>There is no drop box at this location.</p>
-		<p class="fn-rtn"><a href="#fn2-rf"><span class="wb-inv">Return to footnote </span>2<span class="wb-inv">referrer</span></a></p>
+		<p class="fn-rtn"><a href="#fn3-rf"><span class="wb-inv">Return to footnote </span>2<span class="wb-inv">referrer</span></a></p>
 	</dd>
 </dl>
 </aside>
