--- a/offices.html
+++ b/offices.html
@@ -273,6 +273,11 @@
 			<td>Winnipeg <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>325 Broadway<br>Winnipeg MB &nbsp;R3C 4T4</td>
 		</tr>
+			<tr data-geometry="POINT (-97.065014 49.900810)" data-type="wkt">
+			<td>Winnipeg</td>
+			<td>Winnipeg Tax Centre</td>
+			<td>66 Stapon Road<br>Winnipeg, MB &nbsp;R3C 3M2</td>
+		</tr>
 		<tr data-geometry="POINT (-89.247505 48.383065)" data-type="wkt">
 			<td>Thunder Bay</td>
 			<td>Toronto West-Thunder Bay <abbr title="Tax Services Offices">TSO</abbr></td>
@@ -290,7 +295,7 @@
 		</tr>
 		<tr data-geometry="POINT (-80.981727 46.520655)" data-type="wkt">
 			<td>Sudbury</td>
-			<td>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>Sudbury Tax Centre<br>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>1050 Notre Dame Avenue<br>Sudbury ON &nbsp;P3A 5C1</td>
 		</tr>
 		<tr data-geometry="POINT (-80.483838 43.452868)" data-type="wkt">
@@ -393,6 +398,11 @@
 			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>2575 Ste Anne Boulevard<br>Québec QC &nbsp;G1J 1Y5</td>
 		</tr>
+		<tr data-geometry="POINT (-71.207246 48.411984)" data-type="wkt">
+			<td>Jonquière</td>
+			<td>Jonquière Tax Centre</td>
+			<td>2251 René-Lévesque Boulevard<br><br>Jonquière QC &nbsp;G7S 5J2</td>
+		</tr>
 		<tr data-geometry="POINT (-71.060387 48.429626)" data-type="wkt">
 			<td>Chicoutimi</td>
 			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
@@ -422,6 +432,11 @@
 			<td>Moncton</td>
 			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>217-770 Main St<br>Moncton NB &nbsp;E1C 1E7</td>
+		</tr>
+		<tr data-geometry="POINT (-63.796647 46.410705)" data-type="wkt">
+			<td>Summerside</td>
+			<td>Prince Edward Island Tax Centre</td>
+			<td>275 Pope Road<br>Summerside, PE &nbsp;C1N 6A2</td>
 		</tr>
 		<tr data-geometry="POINT (-63.675277 44.640838)" data-type="wkt">
 			<td>Halifax</td>
