--- a/offices.html
+++ b/offices.html
@@ -401,7 +401,7 @@
 		<tr data-geometry="POINT (-71.207246 48.411984)" data-type="wkt">
 			<td>Jonquière</td>
 			<td>Jonquière Tax Centre</td>
-			<td>2251 René-Lévesque Boulevard<br><br>Jonquière QC &nbsp;G7S 5J2</td>
+			<td>2251 René-Lévesque Boulevard<br>Jonquière QC &nbsp;G7S 5J2</td>
 		</tr>
 		<tr data-geometry="POINT (-71.060387 48.429626)" data-type="wkt">
 			<td>Chicoutimi</td>
