--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -138,7 +138,7 @@
 "noreqlabel": true
 }'>
 
-<p><span class="h3">What type of address are you looking for?</span></p>
+	<p><span class="h3">What type of address are you looking for?</span></p><p>...</p>
 	<ul>
 		<li>A mailing address
 			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, "noreqlabel": true}'>
