--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -177,7 +177,7 @@
 				</ul>
 			</div>	
 		</li>
-		<li data-wb-fieldflow='[{"action": "removeClass", "source": "#tso-bttn-2", "class": "mfp-hide", "live":true},{"action": "redir", "url": "https://fomag.github.io/temp/offices.html"}]'>An office location or drop box site</a></li>
+		<li data-wb-fieldflow='[{"action": "removeClass", "source": "#tso-bttn-2", "class": "mfp-hide", "live":true},{"action": "redir", "url": "https://fomag.github.io/temp/offices.html"}]'>An office location or drop box site</a></li><p>...</p>
 	</ul>
 
 </div>
