--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -138,7 +138,7 @@
 "noreqlabel": true
 }'>
 
-	<p><span class="h3">What type of address are you looking for?</span><br><small><span class="text-info glyphicon glyphicon-info-sign" aria-hidden="true"></span> If you are submitting a CRA form, check if a mailing address is printed on the form.</small></p>
+	<p><span class="h3">What type of address are you looking for?</span><br><small><span class="text-info glyphicon glyphicon-info-sign" aria-hidden="true"></span> <span class="text-muted">If you are submitting a CRA form, first check if a mailing address is printed on the form.</span></small></p>
 	<ul>
 		<li>A mailing address
 			<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"select", "reset": { "action": "addClass", "source":".results,#osm-map", "class": "mfp-hide"}, "noreqlabel": true}'>
