--- a/offices.html
+++ b/offices.html
@@ -146,7 +146,7 @@
 </section>
 
 <div id="osm_map" class="wb-geomap mrgn-tp-lg" data-wb-geomap='{ 
-	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
+	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.txt",
 	"tables": [ { 
 		"id": "cities", 
 		"tooltips": true, 
@@ -486,7 +486,6 @@
 	</dd>
 </dl>
 </aside>
-
 
 	
 <div class="pagedetails">
