--- a/offices.html
+++ b/offices.html
@@ -184,7 +184,7 @@
 
 <details>
 <summary>Office locations listed geographically from west to east</summary>
-<table id="cities" aria-label="Office locations" class="table table-condensed">
+<table aria-label="Office locations" class="table table-condensed">
 	<thead>
 		<tr>
 			<th>City</th>
