--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -157,8 +157,8 @@
 					</li>			
 					<li>British Columbia</li>
 					<li>Manitoba</li>
-					<li>New Brunswich</li>
-					<li>Newfoundland</li>
+					<li>New Brunswick</li>
+					<li>Newfoundland and Labrador</li>
 					<li>Nova Scotia</li>
 					<li>Ontario
 						<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noreqlabel": true, "noForm": true}'>
