--- a/offices.html
+++ b/offices.html
@@ -487,7 +487,286 @@
 </dl>
 </aside>
 
-	
+<!-- Duplicate table but hidden with ID -->
+<div class="hidden-lg hidden-md hidden-sm hidden-xs">	
+<table id="cities" aria-label="Office locations" class="table table-condensed">
+	<thead>
+		<tr>
+			<th>City</th>
+			<th>Office</th>
+			<th>Address</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr data-geometry="POINT (-135.055647 60.719378)" data-type="wkt">
+			<td>Whitehorse<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Whitehorse <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Elijah Smith Building<br>300 Main Street<br>Whitehorse, YT &nbsp;Y1A 2B5</td>
+		</tr>
+		<tr data-geometry="POINT (-123.355834 48.426654)" data-type="wkt">
+			<td>Victoria</td>
+			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
+			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
+		</tr>
+		<tr data-geometry="POINT (-123.093658 49.271543)" data-type="wkt">
+			<td>Vancouver</td>
+			<td>Vancouver <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>468 Terminal Ave<br>Vancouver BC &nbsp;V6A 0C1</td>
+		</tr>	
+		<tr data-geometry="POINT (-122.846127 49.179560)" data-type="wkt">
+			<td>Surrey</td>
+			<td>Fraser Valley <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>9737 King George Boulevard<br>Surrey BC &nbsp;V3T 5W6</td>
+		</tr>				
+		<tr data-geometry="POINT (-122.748738 53.918063)" data-type="wkt">
+			<td>Prince George</td>
+			<td>Vancouver Island and North <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>280 Victoria Street<br>Prince George BC &nbsp;V2L 4X3</td>
+		</tr>
+		<tr data-geometry="POINT (-119.595623 49.498491)" data-type="wkt">
+			<td>Penticton</td>
+			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+		</tr>
+		<tr data-geometry="POINT (-119.494458 49.886962)" data-type="wkt">
+			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
+		</tr>
+		<tr data-geometry="POINT (-114.373037 62.453132)" data-type="wkt">
+			<td>Yellowknife<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Yellowknife <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Greenstone Building<br>5101 Franklin Ave<br>Yellowknife, NT &nbsp;X1A 3Z4</td>
+		</tr>
+		<tr data-geometry="POINT (-114.059033 51.049773)" data-type="wkt">
+			<td>Calgary</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
+		</tr>
+		<tr data-geometry="POINT (-113.811876 52.268785)" data-type="wkt">
+			<td>Red Deer</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>4996 49th Avenue<br>Red Deer AB &nbsp;T4N 6X2</td>
+		</tr>
+		<tr data-geometry="POINT (-113.486588 53.542585)" data-type="wkt">
+			<td>Edmonton</td>
+			<td>Edmonton <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>9700 Jasper Avenue<br>Edmonton AB &nbsp;T5J 4C8</td>
+		</tr>
+		<tr data-geometry="POINT (-112.836662 49.693722)" data-type="wkt">
+			<td>Lethbridge</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>200-419 7th Street South<br>Lethbridge AB &nbsp;T1J 4A9</td>
+		</tr>
+		<tr data-geometry="POINT (-106.659931 52.132465)" data-type="wkt">
+			<td>Saskatoon</td>
+			<td>Saskatchewan <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>340 3rd Avenue North<br>Saskatoon SK &nbsp;S7K 0A8</td>
+		</tr>
+		<tr data-geometry="POINT (-104.615002 50.448010)" data-type="wkt">
+			<td>Regina<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Saskatchewan <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1955 Smith Street<br>Regina SK &nbsp;S4P 2N9</td>
+		</tr>
+		<tr data-geometry="POINT (-99.952610 49.847471)" data-type="wkt">
+			<td>Brandon<sup id="fn2-rf"><a class="fn-lnk" href="#fn2"><span class="wb-inv">Footnote </span>2</a></sup></td></td>
+			<td>Brandon <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>210 - 153 11th Street<br>Brandon MB &nbsp;R7A 7K6</td>
+		</tr>
+		<tr data-geometry="POINT (-97.141214 49.887733)" data-type="wkt">
+			<td>Winnipeg</td>
+			<td>Winnipeg <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>325 Broadway<br>Winnipeg MB &nbsp;R3C 4T4</td>
+		</tr>
+			<tr data-geometry="POINT (-97.065014 49.900810)" data-type="wkt">
+			<td>Winnipeg</td>
+			<td>Winnipeg Tax Centre</td>
+			<td>66 Stapon Road<br>Winnipeg, MB &nbsp;R3C 3M2</td>
+		</tr>
+		<tr data-geometry="POINT (-89.247505 48.383065)" data-type="wkt">
+			<td>Thunder Bay</td>
+			<td>Toronto West-Thunder Bay <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>130 South Syndicate Avenue<br>Thunder Bay ON &nbsp;P7E 1C7</td>
+		</tr>
+		<tr data-geometry="POINT (-83.043807 42.316300)" data-type="wkt">
+			<td>Windsor</td>
+			<td>London-Windsor <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>441 University Avenue West, Suite 101<br>Windsor ON &nbsp;N9A 5S8</td>
+		</tr>
+		<tr data-geometry="POINT (-81.252588 42.983970)" data-type="wkt">
+			<td>London</td>
+			<td>London-Windsor <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>451 Talbot Street<br>London ON &nbsp;N6A 5E5</td>
+		</tr>
+		<tr data-geometry="POINT (-80.981727 46.520655)" data-type="wkt">
+			<td>Sudbury</td>
+			<td>Sudbury Tax Centre<br>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1050 Notre Dame Avenue<br>Sudbury ON &nbsp;P3A 5C1</td>
+		</tr>
+		<tr data-geometry="POINT (-80.483838 43.452868)" data-type="wkt">
+			<td>Kitchener</td>
+			<td>Kitchener/Waterloo <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>166 Frederick Street<br>Kitchener ON &nbsp;N2H 0A9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.873610 43.259402)" data-type="wkt">
+			<td>Hamilton</td>
+			<td>Hamilton Niagara <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>55 Bay Street North<br>Hamilton ON &nbsp;L8R 3P7</td>
+		</tr>
+		<tr data-geometry="POINT (-79.6842738 44.393736)" data-type="wkt">
+			<td>Barrie</td>
+			<td>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>81 Mulcaster Street<br>Barrie ON &nbsp;L4M 6T7</td>
+		</tr>
+		<tr data-geometry="POINT (-79.674674 43.622075)" data-type="wkt">
+			<td>Mississauga</td>
+			<td>Toronto West-Thunder Bay <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>5800 Hurontario Street<br>Mississauga ON &nbsp;Mississauga ON</td>
+		</tr>
+		<tr data-geometry="POINT (-79.411749 43.765915)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto North <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>5001 Yonge Street<br>Toronto ON &nbsp;M2N 6R9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.3779828 43.646119)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto Centre <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1 Front Street West<br>Toronto ON &nbsp;M5J 2X6</td>
+		</tr>
+		<tr data-geometry="POINT (-79.256388 43.774345)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto East <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>200 Town Centre Court<br>Toronto ON &nbsp;M1P 4Y3</td>
+		</tr>
+		<tr data-geometry="POINT (-79.247803 43.158788)" data-type="wkt">
+			<td>St. Catharines</td>
+			<td>Hamilton Niagara <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>32 Church Street<br>St. Catharines ON &nbsp;L2R 3B9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.019099 48.241991)" data-type="wkt">
+			<td>Rouyn-Noranda</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>44 du Lac Avenue<br>Rouyn-Noranda QC &nbsp;T5J 4C8</td>
+		</tr>
+		<tr data-geometry="POINT (-78.344282 44.268589)" data-type="wkt">
+			<td>Peterborough</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1161 Crawford Drive<br>Peterborough ON &nbsp;K9J 6X6</td>
+		</tr>
+		<tr data-geometry="POINT (-77.384647 44.169917)" data-type="wkt">
+			<td>Belleville</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>11 Station Street<br>Belleville ON &nbsp;K8N 2S3</td>
+		</tr>
+		<tr data-geometry="POINT (-76.520434 44.260890)" data-type="wkt">
+			<td>Kingston</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1475 John Counter Boulevard<br>Kingston ON &nbsp;K7M 0E6</td>
+		</tr>
+		<tr data-geometry="POINT (-75.6999758 45.418293)" data-type="wkt">
+			<td>Ottawa</td>
+			<td>Ottawa <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>333 Laurier Avenue West<br>Ottawa ON &nbsp;K1A 0L9</td>
+		</tr>
+		<tr data-geometry="POINT (-75.696693 45.475245)" data-type="wkt">
+			<td>Gatineau</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>85 Chemin de La Savane<br>Gatineau, QC &nbsp;K1A 1L4</td>
+		</tr>
+		<tr data-geometry="POINT (-73.759242 45.566347)" data-type="wkt">
+			<td>Laval</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>3400 Jean-Béraud Avenue<br>Laval QC &nbsp;H7T 2Z2</td>
+		</tr>
+		<tr data-geometry="POINT (-73.564410 45.505992)" data-type="wkt">
+			<td>Montréal</td>
+			<td>Montréal <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>305 René-Lévesque Boulevard West<br>Montréal QC &nbsp;H2Z 1A6</td>
+		</tr>
+		<tr data-geometry="POINT (-73.455644 45.463779)" data-type="wkt">
+			<td>Brossard</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>3250 Lapinière Boulevard<br>Brossard QC &nbsp;J4Z 3T8</td>
+		</tr>
+		<tr data-geometry="POINT (-72.550334 46.335667)" data-type="wkt">
+			<td>Trois-Rivières</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>2250 St-Olivier Street<br>Trois-Rivières, QC &nbsp;G9A 4E9</td>
+		</tr>
+		<tr data-geometry="POINT (-71.894764 45.399699)" data-type="wkt">
+			<td>Sherbrooke</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>50 Place de la Cité<br>Sherbrooke QC &nbsp;J1H 5L8</td>
+		</tr>
+		<tr data-geometry="POINT (-71.213730 46.845272)" data-type="wkt">
+			<td>Québec</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>2575 Ste Anne Boulevard<br>Québec QC &nbsp;G1J 1Y5</td>
+		</tr>
+		<tr data-geometry="POINT (-71.207246 48.411984)" data-type="wkt">
+			<td>Jonquière</td>
+			<td>Jonquière Tax Centre</td>
+			<td>2251 René-Lévesque Boulevard<br>Jonquière QC &nbsp;G7S 5J2</td>
+		</tr>
+		<tr data-geometry="POINT (-71.060387 48.429626)" data-type="wkt">
+			<td>Chicoutimi</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>100 La Fontaine Street<br>Chicoutimi QC &nbsp;G7H 6X2</td>
+		</tr>
+		<tr data-geometry="POINT (-68.525788 48.450163)" data-type="wkt">
+			<td>Rimouski</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>Suite 101, 180 de la Cathédrale Avenue<br>Rimouski QC &nbsp;G5L 5H9</td>
+		</tr>
+		<tr data-geometry="POINT (-68.523060 63.749211)" data-type="wkt">
+			<td>Iqaluit<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Iqaluit <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Qilaut Building<br>933 Mivvik Street<br>Iqaluit, NU &nbsp;X0A 0H0</td>
+		</tr>
+		<tr data-geometry="POINT (-66.060854 45.270853)" data-type="wkt">
+			<td>Saint John</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>65 Canterbury Street<br>Saint John NB &nbsp;E2L 2C7</td>
+		</tr>
+		<tr data-geometry="POINT (-65.646192 47.610901)" data-type="wkt">
+			<td>Bathurst</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>955 Murray Avenue<br>Bathurst NB &nbsp;E2A 0C8</td>
+		</tr>
+		<tr data-geometry="POINT (-64.777330 46.088083)" data-type="wkt">
+			<td>Moncton</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>217-770 Main St<br>Moncton NB &nbsp;E1C 1E7</td>
+		</tr>
+		<tr data-geometry="POINT (-63.796647 46.410705)" data-type="wkt">
+			<td>Summerside</td>
+			<td>Prince Edward Island Tax Centre</td>
+			<td>275 Pope Road<br>Summerside, PE &nbsp;C1N 6A2</td>
+		</tr>
+		<tr data-geometry="POINT (-63.675277 44.640838)" data-type="wkt">
+			<td>Halifax</td>
+			<td>Nova Scotia <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>100-145 Hobsons Lake Drive<br>Halifax NS &nbsp;B3J 2T5</td>
+		</tr>
+		<tr data-geometry="POINT (-63.120901 46.261656)" data-type="wkt">
+			<td>Charlottetown</td>
+			<td>Prince Edward Island <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1-30 Brackley Point Road<br>Charlottetown PE &nbsp;C1A 6X9</td>
+		</tr>
+		<tr data-geometry="POINT (-60.195108 46.141256)" data-type="wkt">
+			<td>Sydney</td>
+			<td>Nova Scotia <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>47 Dorchester Street<br>Sydney NS &nbsp;B1P 7H5</td>
+		</tr>
+		<tr data-geometry="POINT (-52.703087 47.568358)" data-type="wkt">
+			<td>St. John's</td>
+			<td>Newfoundland and Labrador <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>Sir Humphrey Gilbert Building<br>165 Duckworth Street<br>St. John's NL &nbsp;A1B 1G4</td>
+		</tr>
+	</tbody>
+</table>
+</div>
+
 <div class="pagedetails">
 <div class="row">
 <div class="col-sm-6 col-md-5 col-lg-4">
