--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -156,7 +156,7 @@
 						</div>		
 					</li>			
 					<li>British Columbia</li>
-					<li>Manitoba</li>
+					<li data-wb-fieldflow='{"action": "append", "source": "#scenario-b", "renderas":"radio", "noreqlabel": true}'>Manitoba</li><!---- Pointing to a scenario just as a demo ---->
 					<li>New Brunswick</li>
 					<li>Newfoundland and Labrador</li>
 					<li>Nova Scotia</li>
