--- a/taxpayer-relief-4.html
+++ b/taxpayer-relief-4.html
@@ -143,12 +143,7 @@
 
 <form method="get">
 
-<div class="wb-fieldflow" data-wb-fieldflow='{
-"renderas":"radio", 
-"reset": { "action": "addClass", "source":".results, "class": "mfp-hide"}, 
-"noForm": true,					     
-"noreqlabel": true
-}'>
+<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noForm": true, "noreqlabel": true}'>
 
 <p><span class="h3">Are you seeking relief of penalties or interest?</span></p>
 
@@ -158,13 +153,13 @@
 </ul>
 </div>
 
-<section id="tr-bttn" class="results mfp-hide">
-<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Continue to Decision tree" />
-</section>
-
 </form>
 
 </div>
+
+<section id="tr-bttn" class="results mfp-hide">
+<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Continue to Decision tree" />
+</section>
 
 <section id="no-1" class="results well mfp-hide">
 <p>If you are not seeking relief of penalties or interest, this tool does not apply to you.</p>
