--- a/taxpayer-relief-4.html
+++ b/taxpayer-relief-4.html
@@ -143,7 +143,12 @@
 
 <form method="get">
 
-<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "reset": { "action": "addClass", "source":".results", "class": "mfp-hide"}, "noForm": true, "noreqlabel": true}'>
+<div class="wb-fieldflow" data-wb-fieldflow='{
+"renderas":"radio",
+"reset": { "action": "addClass", "source":".results", "class": "mfp-hide"},
+"noForm": true,
+"noreqlabel": true
+}'>
 
 <p><span class="h3">Are you seeking relief of penalties or interest?</span></p>
 
@@ -158,7 +163,7 @@
 </div>
 
 <section id="tr-bttn" class="results mfp-hide">
-<input class="btn btn-primary btn-lg mrgn-bttm-md" type="submit" value="Continue to Decision tree" />
+    <a class="btn btn-primary btn-lg mrgn-bttm-md" href="https://fomag.github.io/temp/taxpayer-relief-4-2.html">Continue to Decision tree</a>
 </section>
 
 <section id="no-1" class="results well mfp-hide">
